:pencil: Update comments