@@ -1,9 +1,6 @@
 package com.ywh.problem.leetcode.medium;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 /**
  * 数字组合
@@ -20,22 +17,19 @@ public class LeetCode77 {
      * @param k         剩余待凑元素个数
      * @param start     开始取数的位置
      * @param elem
-     * @param result
+     * @param ret
      */
-    private void combine(int n, int k, int start, List<Integer> elem, List<List<Integer>> result) {
+    private void combine(int n, int k, int start, LinkedList<Integer> elem, List<List<Integer>> ret) {
         if (k == 0) {
-            result.add(new ArrayList<>(elem));
+            ret.add(new ArrayList<>(elem));
             return;
         }
 
-        // i 从 start 开始，由于要确保剩余可取数字个数大于等于 k 个，会遍历到 n - k + 1
-        // 比如 n = 5，k = 4，即从 1 ~ 5 中取 4 个
-        // 所以 i 必须小于等于 n - k + 1 即 2（2 3 4 5），否则当 i 为 3，无法取 4 个
+        // 从 start 开始，取 [1, n] 的后 k 个元素，所以边界条件为 [start, n-k+1]。
         for (int i = start; i <= n - k + 1; i++) {
             elem.add(i);
-            combine(n, k - 1, i + 1, elem, result);
-            // 每次递归完成都弹出当前组合中的最后一位，表示向前回溯一位
-            elem.remove(elem.size() - 1);
+            combine(n, k - 1, i + 1, elem, ret);
+            elem.removeLast();
         }
     }
 
@@ -52,8 +46,7 @@ public class LeetCode77 {
             return Collections.emptyList();
         }
         List<List<Integer>> ret = new ArrayList<>();
-        List<Integer> elem = new ArrayList<>();
-        combine(n, k, 1, elem, ret);
+        combine(n, k, 1, new LinkedList<>(), ret);
         return ret;
     }
 
@@ -71,11 +64,19 @@ public class LeetCode77 {
         }
         List<List<Integer>> ret = new ArrayList<>();
 
-        // 用前 n - k + 1 个数字（可作为一个集合的起始元素的数字）创建 n - k + 1 个列表、加入到结果集中
+        // 用前 n-k+1 个数字（可作为一个集合的起始元素的数字）创建 n-k+1 个列表、加入到结果集中。
+        // 比如  n == 5，k == 4，则 ret：
+        // [
+        //      [1],
+        //      [2],
+        //      [3],
+        //      [4]
+        // ]
         for (int i = 0; i < n - k + 1; i++) {
-            ret.add(Arrays.asList(i));
+            ret.add(Collections.singletonList(i));
         }
 
+        // 结果集中的每个集合剩余 k-2+1 个元素待补全。
         for (int i = 2; i <= k; i++) {
             List<List<Integer>> tmp = new ArrayList<>();
             for (List<Integer> elem : ret) {
